<resources>
    <string name="app_name">InterneePK</string>
    <string name="title_home">Home</string>
    <string name="contectDesc">Image</string>
    <string name="mobile_app_development">Mobile App Development</string>
    <string name="remote">Remote</string>
    <string name="_1_month">1 Month</string>
    <string name="apply_now">Apply Now</string>
    <string name="login_screen">Login Screen</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="register_screen">Register Screen</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_internship">Enter Internship</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_out">Log Out</string>
</resources>